# stock-analysis

./: .env.example  .gitignore  CLAUDE.md  DEPLOYMENT.md  DEPLOY_GUIDE.md  README.md  TESTING.md  auto-deploy.sh  deploy.sh  docker-compose.yml  upload.bat  部署助手.bat
.claude/: settings.local.json
backend/: .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/v1/: __init__.py  agent.py  backtest.py  llm.py  screener.py  stock.py
backend/app/core/: config.py  llm.py  llm_config.py
backend/app/models/: analysis.py  stock.py
backend/app/services/agents/: __init__.py  base.py
backend/app/services/agents/prompts/: fundamental.txt  news.txt  researcher.txt  risk_manager.txt  sentiment.txt  technical.txt  trader.txt
backend/app/services/backtest/: __init__.py  engine.py
backend/app/services/data/: __init__.py  akshare.py  cache.py
backend/app/services/indicators/: __init__.py  technical.py
backend/app/services/news/: __init__.py  fetcher.py
backend/app/services/screener/: __init__.py  engine.py
backend/tests/: conftest.py  test_api.py  test_indicators.py  test_indicators_simple.py  test_llm_config.py
docs/plans/: 2026-01-20-stock-analysis-design.md
frontend/: .env.local.example  Dockerfile  jest.config.js  next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/dashboard/: layout.tsx  page.tsx
frontend/app/dashboard/analysis/: page.tsx
frontend/app/dashboard/backtest/: page.tsx
frontend/app/dashboard/screener/: page.tsx
frontend/app/dashboard/settings/: page.tsx
frontend/app/dashboard/stock/[code]/: page.tsx
frontend/components/backtest/: BacktestResults.tsx  index.ts
frontend/components/charts/: CandlestickChart.tsx  IndicatorChart.tsx  index.ts
frontend/components/news/: NewsList.tsx  index.ts
frontend/components/screener/: ConditionBuilder.tsx  TemplateSelector.tsx
frontend/components/stock/: StockInfoCard.tsx  index.ts
frontend/components/ui/: button.tsx  dropdown-menu.tsx  select.tsx  tabs.tsx
frontend/components/ui/__tests__/: button.test.tsx  input.test.tsx
frontend/lib/: api.ts
